src/app/globals.css
:root {

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
  
  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );
  
    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-size: 20x;
}

body {
  color: rgb(var(--foreground-rgb));
  /* background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

nav{
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #D0D7ED;
  height: 4rem;
  padding: 0.5rem 5rem;
  width: 100vw;
}

.logoImg{
  width: 90px;
  height: 45px;
}

.menu{
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: serif;
  font-size: 1.15rem;
  font-weight: 500;
  height: 100%;
  width: 33vw;
}
.menu > a{
  text-decoration: none;
  padding: "0px 1rem";
  height: "100%";
  cursor: "pointer"
}
.menu > a :hover{
  color: rgb(32, 117, 240);
}

.dwnldZET button{
  /* background: rgb(32, 117, 240);  */
  border: none; 
  color: rgb(255, 255, 255); 
  border-radius: 8px; 
  height: 34px; 
  font-size: 16px; 
  width: 120%;
}

.hamburgerMenu{
  display: none;
}

